# ask-hn-digests

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: hn-discussion-processing.mdc  hn_discussion_processing.mdc
.github/workflows/: deploy-workers.yml  deploy.yml
ask_hn_digest/: asgi.py  settings.py  sitemaps.py  urls.py  utils.py  wsgi.py
core/: admin.py  apps.py  choices.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
core/api/: schemas.py  views.py
core/migrations/: 0002_initial.py  0003_newslettersubscriber.py  0004_newslettersubscriber_added_to_buttondown.py  0005_hndiscussionsummary.py  0006_hndiscussionsummary_description_and_more.py  0007_hndiscussionsummary_tags_and_more.py  0008_hndiscussionsummary_discussion_title.py  0009_hndiscussionsummary_twitter_thread.py  0010_hndiscussionsummary_summary_tags.py
deployment/: entrypoint.sh
frontend/src/controllers/: newsletter_controller.js
frontend/templates/: base.html
frontend/templates/account/: email_confirm.html  login.html  logout.html  signup.html
frontend/templates/blog/: blog_post.html  blog_posts.html
frontend/templates/emails/: test_mjml.html
frontend/templates/pages/: admin_panel.html  home.html  pricing.html  user-settings.html  uses.html
